<resources>
    <string name="appname">Yona</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="friends">FRIENDS</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="challenges">CHALLENGES</string>
    <string name="settings">SETTINGS</string>
    <string name="perday">Per day</string>
    <string name="perweek">Per week</string>
    <string name="timeline">Timeline</string>
    <string name="overiview">Overview</string>
    <string name="profile">Profile</string>
    <string name="message">NOTIFICATIONS</string>
    <string name="profiledetails">Profile</string>
    <string name="badges">Badges</string>
    <string name="challengescredit">CREDIT</string>
    <string name="challengeszone">TIMEZONE</string>
    <string name="challengesnogo">NO-GO</string>
    <string name="changepin">CHANGE PIN</string>
    <string name="privacy">PRIVACY</string>
    <string name="contact_us">CONTACT US</string>
    <string name="join">JOIN</string>
    <string name="login">LOGIN</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="connectionnotavailable">OOPS! No Internet Connection Available, please connect and try again.</string>
    <string name="somethingwentwrong">Oops, Something went wrong</string>
    <string name="server_not_rechable">Server is not accessible. Try again.</string>
    <string name="firstname">FIRST NAME</string>
    <string name="name">NAAM</string>
    <string name="lastname">LAST NAME</string>
    <string name="nickname">NICKNAME</string>
    <string name="privacypolicy">Yona is committed to respecting and protecting your privacy. All sensitive data is secured with encryption.</string>
    <string name="mobilenumber">MOBILE PHONE NUMBER</string>
    <string name="usersignupmessage">We use your mobile phone for a secure registration. Your nickname is mandatory and ensures better privacy.</string>
    <string name="enterfirstnamevalidation">You need to enter a first name</string>
    <string name="enternicknamevalidation">You need to enter a nick name</string>
    <string name="enterlastnamevalidation">You need to enter a last name</string>
    <string name="enternumbervalidation">Number should be 9 digits</string>
    <string name="entercountrycode">Please use international number notation,\ne.g. for NL +31</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="passcodetitle">You are not alone</string>
    <string name="passcodetryagain">Try again</string>
    <string name="pincode">PINCODE</string>
    <string name="passcodestep1title">Account created</string>
    <string name="passcodestep1retrytitle">PINcode doesn\'t match</string>
    <string name="passcodestep1desc">For security, it is mandatory to provide the Yona app with a pincode. Set your PIN below.</string>
    <string name="passcodestep1retrydesc">Your second PIN didn\'t match the first PINcode. Please start over.</string>
    <string name="passcodestep2title">Confirm pincode</string>
    <string name="passcodestep2desc">Enter your PIN again to confirm.</string>
    <string name="msgblockuser">Om veiligheidsredenen is je account geblokkeerd. Gebruik de ‘PIN reset’ knop hieronder om je account opnieuw te activeren.</string>
    <string name="msgblocktitle">Your account is blocked</string>
    <string name="passcodereset">PIN reset</string>
    <string name="invalidotp">Invalid accesscode</string>
    <string name="accountlogin">Account is being created</string>
    <string name="accountloginsecuritymessage">For security, you will receive a code by SMS. Please enter this code below.</string>
    <string name="sendotpagain">Send code again</string>
    <string name="adddevice">ADD DEVICE</string>
    <string name="showopenvpnlog">SHOW VPN LOG SCREEN</string>
    <string name="yonaadddevicemessage">%1$s enter this passcode on the new device where you like to use Yona.</string>
    <string name="loggedinadddevicemessage">You have not logged on this device before. Go to your primary device (probably your mobile), open Yona, open settings and use \'Add Device\' and enter the fields below.</string>
    <string name="passcode">CODE</string>
    <string name="inloggin">LOGIN</string>
    <string name="enterpasscode">You need to enter a 6 digit alphanumeric passcode.</string>
    <string name="resetpinrequest">Your request for reset has been received. You will receive an text message with a PIN reset confirmation code within %1$s.</string>
    <string name="resetpinalert">Do you really want to reset your PIN? For security reasons, that will take time and you cannot use Yona in the meanwhile.</string>
    <string name="useroverride">Mobile Number %1$s is already registered with Yona. Do you want to re-register same number? (Note: All data associated with this number will be removed, if you want to add another device, you can go back and click on Login.)</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="challenges.addBudgetGoal.setChallengeButton">SAVE CHALLENGE</string>
    <string name="challenges.addBudgetGoal.budgetChallengeMainTitle">CAPTURE CREDIT</string>
    <string name="challenges.addBudgetGoal.timeZoneLabel">Timezone</string>
    <string name="challenges.addBudgetGoal.minutesPerDayLabel">minutes per day</string>
    <string name="challenges.addBudgetGoal.budgetChallengeDescription">Specify how much time you want to spend on %1$s</string>
    <string name="challenges.addBudgetGoal.deletedGoalMessage">Remove challenge</string>
    <string name="deleteuser">UNSUBSCRIBE</string>
    <string name="usercredential">User Credential</string>
    <string name="challengesaddBudgetGoalcannotDeleteMandatoryGoalMessage">Can\'t remove mandatory challenge</string>
    <string name="deleteusermessage">Unsubscribing means you lose all information (friends, notifications, challenges, activities, etc.) on all of your devices. Press OK if this is intended.</string>
    <string name="usercredentialmsg">All data is encrypted. To solve some problems we have to decrypt. Only use this option when your support team ask for it.</string>
    <string name="cancel">CANCEL</string>
    <string name="challengesnogoheader">Here you will capture where you do not want to come at all.</string>
    <string name="challengestijdzoneheader">Choose a category from where you want to set a time zone</string>
    <string name="challenge_budget_title">Set yourself a target by setting a daily credit balance</string>
    <string name="challenge_timezone_title">Decide if you want to spend time or not.</string>
    <string name="challenge_nogo_add_title">Choose a category in which you want to set up a no go for</string>
    <string name="challengestegoedheader">Select a category from where you want to define a credit for</string>
    <string name="challengesgoalcreatebutton">SAVE CHALLENGE</string>
    <string name="budgetgoaldesc">minutes per day</string>
    <string name="budgetgoaltitle">Credit</string>
    <string name="timezonegoalheadersubtext">Specify the time range you want to spend on %1$s.</string>
    <string name="budgetgoalheadersubtext">Specify how much time you want to spend on %1$s.</string>
    <string name="timezonegoalsubtext">waarbinnen gebruik is toegestaan</string>
    <string name="timezone">Timezone</string>
    <string name="screentitle1">Transparency</string>
    <string name="screentitle2">Share</string>
    <string name="screentitle3">Borders</string>
    <string name="screentitle4">Time Allocation</string>
    <string name="screendesc1">Personal choice to be transparent...</string>
    <string name="screendesc2">Share your goals with someone you trust.</string>
    <string name="screendesc3">Set borders and involve others</string>
    <string name="screendesc4">Keep control of the time you\'re online</string>
    <string name="urlnotfound">URL not found.</string>
    <string name="dataparseerror">Data Parsing error.</string>
    <string name="challengesnogosubText">You don\’t what to spend time here</string>
    <string name="challengestimzoesubtext">Permitted %1$s</string>
    <string name="challengesbudgetsubtext">You can spend %1$s minutes a day on this category</string>
    <string name="email">EMAIL</string>
    <string name="invitefriend">INVITE FRIEND</string>
    <string name="addfriendmanually">Manual</string>
    <string name="addfriendcontacts">From Address book</string>
    <string name="enteremailvalidation">You need to enter the email address of your friend.</string>
    <string name="nogoheadersubtext">You don\’t what to spend any time</string>
    <string name="challengedeletemsg">Are you sure you want to remove this challenge?</string>
    <string name="timepickerstarttimelable">Select the <b>time from</b> </string>
    <string name="timepickerendtimelable">Select the <b>time untill</b></string>
    <string name="timepickererror">Current time must be future time</string>
    <string name="timepickerselect">Select time you want to spent:</string>
    <string name="add_goal_error">Please add at least one time to add in %1$s.</string>
    <string name="challengesdetail">CAPTURE %1$s</string>
    <string name="challengestimesbetween">between %1$s and %2$s </string>
    <string name="edit_profile">EDIT ACCOUNT</string>
    <string name="enternamevalidation">You need to enter a name</string>
    <string name="profile_choose_photo">Choose</string>
    <string name="profile_take_photo">Take Photo</string>
    <string name="profile_choose_from_library">Choose from photo library</string>
    <string name="settings_current_pin">Current pincode</string>
    <string name="settings_current_pin_message">Before you can change your PIN you need to enter your current PIN</string>
    <string name="settings_new_pincode">New PIN</string>
    <string name="settings_new_pin_message">Enter new PIN</string>
    <string name="settings_confirm_new_pin">Confirm PIN</string>
    <string name="settings_confirm_new_pin_message">Enter your PIN again to confirm</string>
    <string name="remove_friend_btn">REMOVE FRIEND</string>
    <string name="status_friend_request">Friend request</string>
    <string name="delete">Delete</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="last_week">Last Week</string>
    <string name="buddyconnectrequested">Friend request</string>
    <string name="buddyresponserejected">Friend request declined</string>
    <string name="buddyresponseaccepted">Friend request accepted</string>
    <string name="buddyconnectresponseaccepted">Friend request accepted</string>
    <string name="buddyconnectresponserejected">Friend request declined</string>
    <string name="buddydisconnectmessageuserromovedbuddy">You are removed as a friend</string>
    <string name="friend_request_content">Please note that this request may be sent by someone else. Check mobile number: %1$s.</string>
    <string name="reject">REJECT</string>
    <string name="accept">ACCEPT</string>
    <string name="category_added">You already Added this category.</string>
    <string name="hours">%1$s hour(s)</string>
    <string name="minute">%1$s minute(s)</string>
    <string name="seconds">%1$s second(s)</string>
    <string name="no_data_found">Oops, no data found.</string>
    <string name="no_friend_text">No friends to show.</string>
    <string name="goaloverminute">minutes out of time</string>
    <string name="goaltotalminute">minutes total</string>
    <string name="spreiding">Scatter</string>
    <string name="score">Score</string>
    <string name="average">Average</string>
    <string name="nogogoalachieved">no hits, hold on!</string>
    <string name="nogogoalbeyond">%1$s minutes</string>
    <string name="budgetgoalbeyondtime">minutes over your limit</string>
    <string name="budgetgoaltime">minutes credit</string>
</resources>