<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2016 Stichting Yona Foundation
  ~
  ~  This Source Code Form is subject to the terms of the Mozilla Public
  ~  License, v. 2.0. If a copy of the MPL was not distributed with this
  ~  file, You can obtain one at https://mozilla.org/MPL/2.0/.
  ~
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_add_avatar_height"
                android:background="@color/grape"
                android:scaleType="centerInside"
                android:src="@drawable/icn_avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/thirty_two"
                android:layout_marginRight="@dimen/thirty_two"
                android:orientation="vertical">

                <nu.yona.app.customview.YonaFontTextView
                    style="@style/Explanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/thirty_six"
                    android:text="@string/loggedinadddevicemessage"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/mobile_number_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <nu.yona.app.customview.YonaFontNumberTextView
                        android:id="@+id/countryCode"
                        style="@style/InputTxt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:digits="1234567890 +()"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        android:maxLength="4"
                        android:maxLines="1" />

                    <nu.yona.app.customview.YonaFontNumberTextView
                        android:id="@+id/mobileNumber"
                        style="@style/InputTxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:digits="1234567890 "
                        android:drawableRight="@drawable/icn_mobile"
                        android:ellipsize="end"
                        android:hint="@string/mobilenumber"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="@integer/number_limit"
                        android:maxLines="1"
                        android:textColorHint="@color/black" />

                </LinearLayout>

                <nu.yona.app.customview.YonaFontTextView
                    android:id="@+id/mobile_error_text"
                    style="@style/InputTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="gone" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passcode_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/hintText">

                    <nu.yona.app.customview.YonaFontEditTextView
                        android:id="@+id/passcode"
                        style="@style/InputTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/icn_name"
                        android:ellipsize="end"
                        android:hint="@string/passcode"
                        android:imeOptions="actionDone"
                        android:maxLength="@integer/char_limit"
                        android:maxLines="1"
                        android:textColorHint="@color/black" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <nu.yona.app.customview.YonaFontButton
        android:id="@+id/next"
        style="@style/BtnTxtSmall"
        android:layout_width="match_parent"
        android:layout_height="@dimen/signup_profile_btn_height"
        android:background="@color/darkish_pink"
        android:text="@string/next"
        android:textColor="@android:color/white" />
</LinearLayout>